Add participant-sim verification tests in CSIT for composition
Issue-ID: POLICY-5675
